2002-03-07  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* pp/: use "invalid" not "illegal"
 
2002-03-06  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
2002-03-06  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opfropp_util.cpp: more specific error messages

	* doc/oprofile.sgml: clarify problem about sparse
	  samples files and filesystem.

	* util/file_manip.h:
	* util/file_manip.cpp: create_file_list() allow recursive
	  file list creation.
	* pp/op_time.cpp: add option -p/-P to allow specifying
	  alternate path name where to search for image name
	* doc/oprofile.1.in:
	* doc/oprofile.sgml: update option for op_time

2002-03-05  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprofpp_util.cpp: remove multiple symbols belonging
	  to the same vma (Fix #526098)
	  Accept also all symbol types, we filter them by name.

2002-03-04  Philippe Elie  <ph_e@club-internet.fr>

	* util/misc.h: minor comment fix

	* pp/oprofpp_util.cpp: tweak the last commit

2002-03-04  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp_util.cpp: welcome in the local symbols ...
 
2002-03-03  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.h:
	* pp/opf_container.cpp: samples_files_t::add() add an hint
	  parameter on what information will needed.
	* pp/op_time.cpp:
	* pp/oprofpp.cpp:
	* pp/opf_filter.cpp: use it
	
	* pp/op_time.cpp: when a samples files for one counter
	  does not exist avoid to load it (op_time -l) fix #525237

2002-03-02  Philippe Elie  <ph_e@club-internet.fr>

	* pp/Makefile.in: add -pedantic to CXXFLAGS
	* pp/oprofpp.h: replace macro verpbrintf with a function
	* pp/oprofpp_util.cpp: implement it
	* pp/opp_symbol.h:
	* pp/op_time.cpp: fix pedantic warning

	* pp/opevents.cpp:
	* op_user.h: op_get_cpu_nr_counters() new

	* pp/op_time.cpp:
	* pp/opf_container.cpp:
	* pp/opf_filter.cpp:
	* pp/opf_filter.h:
	* pp/opp_symbol.cpp:
	* pp/oprofpp.cpp:
	* pp/oprofpp_util.cpp: remove global var op_nr_counters
