@@ -1,3 +1,9 @@
+2002-03-07  Philippe Elie  <ph_e@club-internet.fr>
+
+	* pp/opf_container.cpp: handle osf_short_linr_info
+	* pp/opp_symbol.cpp: tweak output output when
+	  linenr/filename is not available
+
 2002-03-07  John Levon  <moz@compsoc.man.ac.uk>
 
 	* TODO: update
